# AiSD-Lab3

./: CMakeLists.txt  Grafiki_sortirovok_Vosstanovlenny.xlsx  README.md
app/: main.cpp
include/: bubble_sort.cpp  comb_sort.cpp  generate.cpp  generates.cpp  shake_sort.cpp  sorts.cpp  stats.cpp
